devops/kubernetes/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aquaguard-grafana
  namespace: default
  labels:
    app: aquaguard-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aquaguard-grafana
  template:
    metadata:
      labels:
        app: aquaguard-grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: aquaguard-grafana-service
  namespace: default
spec:
  selector:
    app: aquaguard-grafana
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
