devops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquaguard-db-service
  namespace: default
spec:
  selector:
    app: aquaguard-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: aquaguard-backend-service
  namespace: default
spec:
  selector:
    app: aquaguard-backend
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: aquaguard-frontend-service
  namespace: default
spec:
  selector:
    app: aquaguard-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
